<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/MyCardViewStyle"
    android:id="@+id/ratingRow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:text="@string/rating"/>

            <com.hedgehog.ratingbar.RatingBar
                xmlns:hedgehog="http://schemas.android.com/apk/res-auto"
                android:id="@+id/seperateRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                hedgehog:clickable="false"
                hedgehog:halfstart="true"
                hedgehog:starCount="5"
                hedgehog:starEmpty="@mipmap/star_empty"
                hedgehog:starFill="@mipmap/star_full"
                hedgehog:starHalf="@mipmap/star_half"
                hedgehog:starImageHeight="40dp"
                hedgehog:starImageWidth="50dp"
                hedgehog:starImagePadding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:text="@string/problem"/>

            <TextView
                android:id="@+id/problemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSecondary"
                />
        </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:text="@string/Comments"/>

    <TextView
        android:id="@+id/commentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItemSecondary"
        />

</LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>